@@ -221,7 +221,7 @@ binary-common:
 	dh_strip
 	dh_compress
 	dh_fixperms
-	dh_python
+	dh_python -V 2.3
 	dh_makeshlibs
 	dh_installdeb
 	dh_shlibdeps
